<resources>
    <string name="app_name">Duder</string>

    <string name="login_prompt">Please input you name:</string>
    <string name="login">Connect</string>
    <string name="loginText">Login</string>
    <string name="fbLoginText">Login with Facebook</string>
    <string name="registerText">Register</string>
    <string name="passwordHint">Password</string>
    <string name="passwordConfirmHint">Confirm Password</string>
    <string name="loginHint">Login</string>
    <string name="nicknameHint">Nickname</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Events</string>
    <string name="title_dudes">Dudes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="title_save">Save</string>

    <!-- Drawer menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Events -->
    <string name="no_events">No Events Found</string>
    <string name="no_more_events">No More Events Found</string>
    <string name="transition_name">image_transition</string>
    <string name="participant">Participants: %1$d</string>
    <string name="eventCreateText">Create event</string>
    <string name="eventNameHint">Event Name</string>
    <string name="eventCreateDescription">Event Description</string>
    <string name="eventDescription">AFflkasjdflaksjdf sldkfj asldkfj asldkfja lskdfjaslkd fjasldkf jasdfka sdlfkjasdlkjasfs;lkd f</string>
    <string name="dateHint">Event start date</string>
    <string name="timeHint">Event start time</string>
    <!-- Dudes -->
    <string name="invitationSent">"Invitation is sent"</string>
    <string name="dudeAdded">"Added new dude"</string>

    <!--    Facebook-->
    <string name="facebook_app_id">682883292526178</string>
    <string name="fb_login_protocol_scheme">fb682883292526178</string>
</resources>
