<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registration.layout.main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context="org.duder.view.activity.RegistrationActivity">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/loginFormMargin"
            android:src="@drawable/duder_logo"
            android:tint="@color/primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registration.layout.main" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/loginFormPadding"
            app:layout_constraintLeft_toLeftOf="@+id/registration.layout.main"
            app:layout_constraintRight_toRightOf="@+id/registration.layout.main"
            app:layout_constraintTop_toBottomOf="@+id/image_logo">

            <EditText
                android:id="@+id/login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/loginFormMargin"
                android:hint="@string/loginHint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/nickname_txt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nickname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/loginFormMargin"
                android:hint="@string/nicknameHint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/password_txt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_txt" />

            <EditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/loginFormMargin"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/confirm_password_txt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nickname_txt" />

            <EditText
                android:id="@+id/confirm_password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/loginFormMargin"
                android:hint="@string/passwordConfirmHint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/reg_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_txt" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="@color/success"
                android:text="@string/registerText"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>