<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create.event.layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="org.duder.view.activity.CreateEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration.layout.registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/eventCreateFormPadding"
        app:layout_constraintLeft_toLeftOf="@+id/create.event.layout"
        app:layout_constraintRight_toRightOf="@+id/create.event.layout">

        <EditText
            android:id="@+id/event_name"
            style="@android:style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/loginFormMargin"
            android:ems="10"
            android:hint="@string/eventNameHint"
            app:layout_constraintBottom_toTopOf="@+id/pick_date_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/pick_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/loginFormMargin"
            app:layout_constraintBottom_toTopOf="@+id/hobby_list"
            app:layout_constraintTop_toBottomOf="@+id/event_name">

            <EditText
                android:id="@+id/in_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/loginFormMargin"
                android:focusable="false"
                android:hint="@string/dateHint"
                android:inputType="none"
                app:layout_constraintBottom_toTopOf="@+id/hobby_list"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/in_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/loginFormMargin"
                android:focusable="false"
                android:hint="@string/timeHint"
                android:inputType="none"
                app:layout_constraintLeft_toRightOf="@+id/in_date" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hobby_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/loginFormMargin"
            android:layout_marginLeft="@dimen/element_spacing_normal"
            android:layout_marginRight="@dimen/element_spacing_normal"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_date_time" />

        <ProgressBar
            android:id="@+id/progress_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>